﻿[B][COLOR=FF56ADDA]v4.2.9[/COLOR][/B]
• Fixed: Item labels on season level (NetFilx view)
• Fixed: Movie Set disc art animation (Shelf view)
• Fixed: Crossfade-Labels animation in some views
• Changed: Disc art style to be more realistic (Shelf view)
• Added: Clearlogo for TV-Show/Season disc arts (Shelf view)
• Added: Shelf view for programs
• And some more tiny minor tweaks

[B][COLOR=FF56ADDA]v4.2.8a[/COLOR][/B]
• Fixed: texture bug

[B][COLOR=FF56ADDA]v4.2.8[/COLOR][/B]
• Added: New video viewtype "Shelf"
• Fixed: StarRating overlapping in music info dialogs
• Fixed: Cropped sunrise/sunset label in weather window
• Improved: Home recording info boxes (3 variants)
• Adjusted: Info label line in video OSD
• Added: Experimental permament YouTube channellogo (can be disabled)

[B][COLOR=FF56ADDA]v4.2.7[/COLOR][/B]
• Added: Some new audio codec flags, including missing flags for DTS-HD/DTS-MA
• Fixed: Video OSD / Playercontrols dialog poster art workaround for Amazon Instant Video movie playback (Sandmann's plugin)
• Merged: FR translation
• And some cleanup

[B][COLOR=FF56ADDA]v4.2.6[/COLOR][/B]
• Fixed: Gui overlapping with enabled Kodi intro
• Added: Audio channel flags for video OSD and video info dialog
• Added: Audio codec flag in some views
• Changed: IMDb update script implementation for the recently released update
• Fixed: Small typos, conditions and things that I already forgot

[B][COLOR=FF56ADDA]v4.2.5[/COLOR][/B]
Important fix release
• Fixed: Broken Skin if mouse usage is enabled
• Fixed: Broken conditional weather fanarts, if it was never set before the Extrapack was released

[B][COLOR=FF56ADDA]v4.2.4[/COLOR][/B]
• Fixed: Broken background images for custom widgets with extracted path
• Fixed: Empty custom widget source field if the selection was canceled before
• Fixed: Enabled limit/target options if the source selection was canceled before
• Fixed: Unmatched parentheses

[B][COLOR=FF56ADDA]v4.2.3[/COLOR][/B]