@@ -5649,7 +5649,7 @@
 									<posy>120</posy>
 									<width>234</width>
 									<height>318</height>
-									<texture background="true">$INFO[ListItem.Icon]</texture>
+									<texture diffuse="views/shelf/thumb_shelf_diffuse_box.png" background="true">$INFO[ListItem.Icon]</texture>
 									<aspectratio scalediffuse="false">stretch</aspectratio>
 									<visible>Skin.HasSetting(ShelfRetailBox)</visible>
 								</control>
@@ -5658,7 +5658,7 @@
 									<posy>120</posy>
 									<width>234</width>
 									<height>318</height>
-									<texture background="true">$INFO[ListItem(-1).Icon]</texture>
+									<texture diffuse="views/shelf/thumb_shelf_diffuse_box.png" background="true">$INFO[ListItem(-1).Icon]</texture>
 									<aspectratio scalediffuse="false">stretch</aspectratio>									
 									<visible>Control.IsVisible(8013) + !IsEmpty(ListItem(-1).Art(thumb))</visible>
 									<animation effect="fade" start="100" end="0" time="200" delay="150" condition="Control.IsVisible(8013) + !IsEmpty(ListItem(-1).Art(thumb))">Conditional</animation>
@@ -5669,7 +5669,7 @@
 									<posy>120</posy>
 									<width>234</width>
 									<height>318</height>
-									<texture background="true">$INFO[ListItem(1).Icon]</texture>
+									<texture diffuse="views/shelf/thumb_shelf_diffuse_box.png" background="true">$INFO[ListItem(1).Icon]</texture>
 									<aspectratio scalediffuse="false">stretch</aspectratio>
 									<visible>Control.IsVisible(8014) + !IsEmpty(ListItem(1).Art(thumb))</visible>
 									<animation effect="fade" start="100" end="0" time="200" delay="150" condition="Control.IsVisible(8014) + !IsEmpty(ListItem(1).Art(thumb))">Conditional</animation>
